# compclubshell

./: CMakeLists.txt  Dashboard.qml  LoadingOverlay.qml  Main.qml  OverlayBlock.qml  SetupScreen.qml  config.ini  main.cpp  src.rar
src/core/: audiomanager_win.cpp  audiomanager_win.h  directlaunchauth.cpp  directlaunchauth.h  eaauth.cpp  eaauth.h  epicauth.cpp  epicauth.h  hwidprovider.cpp  hwidprovider.h  iplatformauth.h  networkmanager.cpp  networkmanager.h  processmanager.cpp  processmanager.h  riotauth.cpp  riotauth.h  securitymanager.cpp  securitymanager.h  steamauth.cpp  steamauth.h  steamcrypto.h
src/models/: gamemodel.cpp  gamemodel.h  processmanager.cpp  processmanager.h  storemodel.cpp  storemodel.h
